[package]
name = "Rust_Boruta_Wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustlearn = "0.5.0"
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_csv = "1.1"
rayon = "1.5"
arrayvec = "0.5"
